Gestos de cajon

--- a/TgcViewer - Kinect/Examples/Examples.csproj
+++ b/TgcViewer - Kinect/Examples/Examples.csproj
@@ -91,6 +91,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Expo\Gesture.cs" />
+    <Compile Include="Expo\GestureAnalizer.cs" />
+    <Compile Include="Expo\GestureLocker2.cs" />
     <Compile Include="Expo\GestureLocker.cs" />
     <Compile Include="Expo\Locker.cs" />
     <Compile Include="Kinect\Skleleton.cs" />
@@ -112,10 +115,11 @@
     </Compile>
     <Compile Include="EjemploEnBlanco.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Test\EjemploAnalisisGestos.cs" />
     <Compile Include="Test\EjemploGesto.cs" />
     <Compile Include="Test\EjemploCajonGesto.cs" />
     <Compile Include="Test\EjemploCajon.cs" />
-    <Compile Include="Test\EjemploBasico.cs" />
+    <Compile Include="Test\EjemploAvatar.cs" />
     <Compile Include="Test\EjemploEsqueleto.cs" />
   </ItemGroup>
   <ItemGroup>
