--- a/TgcViewer - Kinect/Examples/Examples.csproj
+++ b/TgcViewer - Kinect/Examples/Examples.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Kinect\TgcKinectSkeletalMesh.cs" />
     <Compile Include="Kinect\TgcKinectSkeletonData.cs" />
     <Compile Include="Kinect\TgcKinectUtils.cs" />
+    <Compile Include="Test\EjemploHandsCursor.cs" />
     <Compile Include="Test\EjemploFocus.cs" />
     <Compile Include="Focus\FocusParser.cs" />
     <Compile Include="Focus\FocusSet.cs" />
